Jetpack Pricing Page Cart Integration - fix styles  - Fix mobile banner cart alignment  - Convert displayName from component to plain string to be shown in JITM

--- a/client/components/jetpack/intro-pricing-banner/style.scss
+++ b/client/components/jetpack/intro-pricing-banner/style.scss
@@ -20,6 +20,12 @@
 		@include break-large {
 			height: 52px;
 		}
+
+
+		@media (max-width: $break-mobile) {
+			justify-content: flex-start;
+			padding-left: 15px;
+		}
 	}
 }
 
@@ -89,6 +95,11 @@
 	position: absolute;
 	right: 10%;
 	display: inline-flex;
+
+	@media (max-width: 960px) {
+		top: 14px;
+	}
+
 }
 
 
